@startuml
'https://plantuml.com/class-diagram

class Employee
{
    - firstName : String
    - lastName : String
    - socialSecurityNumber : int

    + Employee(givenFirstName : String, givenLastName : String, givenSocialSecurityNumber : int)
    + setEmployeeFirstName(newName : String) : void
    + getEmployeeFirstName() : String
    + setEmployeeLastName(newName : String) : void
    + getEmployeeLastName() : String
    + setEmployeeSocialSecurityNumber(newSSN : int) : void
    + getEmployeeSocialSecurityNumber() : int
}

class HourlyEmployee
{
    - wage : int
    - hoursWorked : int

    + HourlyEmployee (givenFirstName : String, givenLastName : String, givenSocialSecurityNumber : int, givenWage : int, givenHoursWorked : int)
    + setWage(newWage : int) : void
    + getEmployeeWage() : int
    + setHoursWorked(newAmountOfHoursWorked) : void
    + getHoursWorked() : int
}

class SalariedEmployee
{
    - weeklySalary : int

    + SalariedEmployee(givenFirstName : String, givenLastName : String, givenSocialSecurityNumber : int, givenWeeklySalary : int)
    + setWeeklySalary(newWeeklySalary : int) : void
    + getWeeklySalary() : int
}

class CommisionEmployee
{
    - commisionRate : int
    - grossSales : int

    + CommisionEmployee(givenFirstName : String, givenLastName : String, givenSocialSecurityNumber : int, givenCommisionRate : int, givenGrossSales : int)
    + setCommisionRate(newCommisionRate : int) : void
    + getCommisionRate() : int
    + setGrossSales(newGrossSaleAmount : int) : void
    + getGrossSales() : int
}

class BaseEmployee
{
    - baseSalary : int

    + BaseEmployee(givenFirstName : String, givenLastName : String, givenSocialSecurityNumber : int, givenBaseSalary: int)
    + setBaseSalary(newBaseSalary : int) : void
    + getBaseSalary() : int
}

class DriverProgram
{
    + DriverProgram (firstEmployee : Employee)
    - convertIntToFormattedSSN(givenSocialSecurityNumber : int) : String
    - printEmployeeInformationTableHeader_Inline() : void
    - printSalariedEmployeeInformation_Inline(employeeInfoToPrint : SalariedEmployee) : void
    - printHourlyEmployeeInformation_Inline(employeeInfoToPrint : HourlyEmployee) : void
    - printCommisionEmployeeInformation_Inline(employeeInfoToPrint : CommisionEmployee) : void
    - printBaseEmployeeInformation_Inline(employeeInfoToPrint : BaseEmployee) : void
    + static main (args : String[]) : void
}

Employee <|-- BaseEmployee
Employee <|-- CommisionEmployee
Employee <|-- SalariedEmployee
Employee <|-- HourlyEmployee

BaseEmployee "0..*" <--> "1"DriverProgram
CommisionEmployee "0..*" <--> "1" DriverProgram
SalariedEmployee "0..*" <--> "1" DriverProgram
HourlyEmployee "0..*" <--> "1" DriverProgram

@enduml